# rust_windows_service_axum

./: Cargo.toml  LICENSE  README.md
src/: main.rs
wix/: main.wxs
