[package]
name = "rust_windows_service_axum"
version = "0.1.0"
edition = "2021"
authors = ["Devin Stewart"]

[dependencies]
windows-service = "0.7"
tokio = {version = "1", features=["full"]}
axum = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }

[package.metadata.wix]
compiler-args = ["-ext", "WixFirewallExtension"]
linker-args = ["-ext", "WixFirewallExtension"]